--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["warn", { "singleQuote": true }],
+    "prettier/prettier": ["warn", { "singleQuote": true, "printWidth": 150 }],
     "import/first": 0
   },
   "env": {
